# Like-AVITO-app-with-Django_4

./: README.md  manage.py  pyproject.toml
Homework_28v2/: asgi.py  settings.py  urls.py  wsgi.py
ads/: admin.py  models.py  permissions.py  serializer.py
ads/migrations/: 0001_initial.py  0002_initial.py
ads/urls/: ad.py  cat.py
ads/views/: ad.py  category.py
datasets/: ad.json  data.py  location.json  user.csv  user.json
selections/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
